<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D000000"
    tools:context=".GameOverFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/background"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/gameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textColor="@color/text_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yourScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/your_score"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/gameOver"
            app:layout_constraintTop_toBottomOf="@+id/gameOver" />

        <TextView
            android:id="@+id/yourScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/init_score"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/gameOver"
            app:layout_constraintTop_toBottomOf="@+id/gameOver" />

        <TextView
            android:id="@+id/bestScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/best_score"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/yourScoreText"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreText" />

        <TextView
            android:id="@+id/bestScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/init_score"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/yourScoreValue"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreValue" />

        <Button
            android:id="@+id/againButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary_blue"
            android:paddingVertical="15dp"
            android:text="@string/againText"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/bestScoreValue"
            app:layout_constraintStart_toStartOf="@+id/bestScoreText"
            app:layout_constraintTop_toBottomOf="@+id/bestScoreText" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#80D62839"
            android:paddingVertical="15dp"
            android:text="@string/homeText"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/againButton"
            app:layout_constraintStart_toStartOf="@+id/againButton"
            app:layout_constraintTop_toBottomOf="@+id/againButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>